// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Create TextField with {"onChange": [Function onChange], "placeholder": "Maxine Musterfrau", "title": "Password", "value": ""} 1`] = `
.emotion-0 {
  background-color: var(
              --white
            );
  border: 2px solid #3d899b;
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px 10px;
}

.emotion-1 {
  font-weight: 400;
  font-size: 0.6666666666666666em;
  font-style: normal;
  color: #3d899b;
}

.emotion-2 {
  font-size: 1em;
  border: none;
  background-color: var(
                --white
              );
  outline: none;
  color: var(--black);
  font-style: normal;
  font-weight: 400;
  height: 2.6666666666666665em;
}

.emotion-2::-webkit-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2::-moz-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2:-ms-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2::placeholder,
.emotion-2:-ms-input-placeholder,
.emotion-2::-ms-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

<div
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Password
  </span>
  <input
    class="emotion-2"
    placeholder="Maxine Musterfrau"
    value=""
  />
</div>
`;

exports[`TextField Create TextField with {"onChange": [Function onChange], "placeholder": "test", "title": "Password", "value": "123password"} 1`] = `
.emotion-0 {
  background-color: var(
              --white
            );
  border: 2px solid #3d899b;
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px 10px;
}

.emotion-1 {
  font-weight: 400;
  font-size: 0.6666666666666666em;
  font-style: normal;
  color: #3d899b;
}

.emotion-2 {
  font-size: 1em;
  border: none;
  background-color: var(
                --white
              );
  outline: none;
  color: var(--black);
  font-style: normal;
  font-weight: 400;
  height: 2.6666666666666665em;
}

.emotion-2::-webkit-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2::-moz-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2:-ms-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

.emotion-2::placeholder,
.emotion-2:-ms-input-placeholder,
.emotion-2::-ms-input-placeholder {
  color: #3d899b;
  opacity: 0.4;
}

<div
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Password
  </span>
  <input
    class="emotion-2"
    placeholder="test"
    value="123password"
  />
</div>
`;
